fixed ordered list numbers

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
      ol {
       font-weight: bold;
-      text-align: center;
+      list-style-position: inside;
      }
      li {
       text-align: center;
@@ -28,6 +28,7 @@
       margin-right: auto;
       height: 200px;
       display: block;
+      border-radius: 8px;
     }
      body {
       font-family: sans-serif;
